Fixed overflow in mobile.

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -10,7 +10,9 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+    width: 100vw;
+    overflow-x: hidden;
+}
   
 h1 {
     font-family: 'Londrina Shadow';
